Small z-index issue.

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -329,6 +329,8 @@ section {
     background: var(--blue);
 
     .content {
+        z-index: 1;
+
         h1 {
             max-width: 900px;
         }
